Fix hover gap in dropdown menu

--- a/styles/Menu.module.css
+++ b/styles/Menu.module.css
@@ -138,7 +138,7 @@
     display: none;
     position: absolute;
     left: 5px;
-    top: 74px;
+    top: 72px;
     width: 220px;
     z-index: 100;
     background-color: rgba(160, 201, 99, 0.927);
